<<<<<<< HEAD
[gd_scene load_steps=9 format=3 uid="uid://xwunu8wwcoy1"]

[ext_resource type="Texture2D" uid="uid://8kl6rn8hxxpb" path="res://src/main/assets/textures/player/parrot.png" id="1_081cl"]
[ext_resource type="Script" path="res://src/main/scene/role/animal/animal.gd" id="1_sx8t1"]
[ext_resource type="AudioStream" uid="uid://dxl7wcwx0y5al" path="res://src/main/assets/sounds/stretch2.ogg" id="3_yiv1p"]
[ext_resource type="AudioStream" uid="uid://dgi2eedbrvncj" path="res://src/main/assets/sounds/catapult.ogg" id="4_jyn20"]
[ext_resource type="AudioStream" uid="uid://7bmdjvskldaa" path="res://src/main/assets/sounds/kick_wood.ogg" id="5_wt4ot"]
[ext_resource type="Texture2D" uid="uid://coscj5yif1p3x" path="res://src/main/assets/textures/items/arrow.png" id="6_1pkfl"]
=======
[gd_scene load_steps=4 format=3 uid="uid://xwunu8wwcoy1"]

[ext_resource type="Texture2D" uid="uid://8kl6rn8hxxpb" path="res://src/main/assets/textures/player/parrot.png" id="1_081cl"]
>>>>>>> d0bef918e6c2aa51edb26de0fc6427ff8a369455

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_f4itb"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_vv3cr"]
radius = 19.0263

<<<<<<< HEAD
[node name="Animal" type="RigidBody2D" groups=["animal"]]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_f4itb")
freeze = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_sx8t1")
=======
[node name="Animal" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_f4itb")
>>>>>>> d0bef918e6c2aa51edb26de0fc6427ff8a369455

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_081cl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vv3cr")
<<<<<<< HEAD

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(6.55651e-07, 9.53674e-07)
scale = Vector2(2, 2)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_yiv1p")
volume_db = -5.0

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jyn20")
volume_db = -10.0

[node name="CollisionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wt4ot")
volume_db = -10.0

[node name="ArrowSprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_1pkfl")
offset = Vector2(150, 0)
=======
>>>>>>> d0bef918e6c2aa51edb26de0fc6427ff8a369455
